objects/due__Diduenjoy_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Case_Type_1__c</fullName>
        <formula>TEXT(due__Case__r.Type)</formula>
        <label>Case Type 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_record_type__c</fullName>
        <formula>due__Case__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_from_Advisor__c</fullName>
        <label>Comment from Advisor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_results__c</fullName>
        <label>Contact results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUE_NPS_Score__c</fullName>
        <label>DUE NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTimeForDelete__c</fullName>
        <formula>now()-1/1440*59</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Time For Delete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instant_advisory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instant advisory</label>
        <referenceTo>Instant_advisory__c</referenceTo>
        <relationshipLabel>Diduenjoy Feedbacks</relationshipLabel>
        <relationshipName>Diduenjoy_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Flag__c</fullName>
        <formula>due__Account__r.PersonContact.Country_Pictogram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(due__Account__r.Market__pc)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_DUE__c</fullName>
        <label>Handling status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone (solved)</fullName>
                </value>
                <value>
                    <fullName>Contacted by email (solved)</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone once - no answer</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone twice - no answer</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone no answer,  then contacted by email (solved)</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone &amp; email (not solved)</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>If_task_completed_status_not_NEW</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(Status_DUE__c, &apos;New&apos;), NOT(ISBLANK(TEXT(Contact_results__c))))</errorConditionFormula>
        <errorMessage>You must change the Handling status.</errorMessage>
    </validationRules>
</CustomObject>